mobile version developing

--- a/index.html
+++ b/index.html
@@ -6,5 +6,79 @@
     <title>lesson_16</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <header class="header container">
+        <div class="auth"><a>Log In</a><button>Sign Up</button></div>
+        <nav class="nav">
+          <ul>
+            <li>sadd</li>
+            <li>sadd</li>
+          </ul>
+        </nav>
+        <div class="logo">
+          <img class="logo__img" src="./images/logo.svg" alt="" />
+          <h2 class="logo__title">Travlog</h2>
+        </div>
+        <img
+          class="header__burger-menu"
+          src="./images/burger-menu.svg"
+          alt=""
+        />
+      </header>
+      <main class="main-content">
+        <section class="travel-guide container">
+          <div class="travel-guide__locations">
+            <img
+              class="travel-guide__location-first"
+              src="./images/location-first.png"
+              alt=""
+            />
+            <img
+              class="travel-guide__third-first"
+              src="./images/location-third.png"
+              alt=""
+            />
+            <img
+              class="travel-guide__second-first"
+              src="./images/location-second.png"
+              alt=""
+            />
+            <img
+              class="travel-guide__send"
+              src="./images/send-img.svg"
+              alt=""
+            />
+            <img
+              class="travel-guide__add-user"
+              src="./images/add-user.svg"
+              alt=""
+            />
+            <div class="travel-guide__top-location">
+              <img src="./images/marker.svg" alt="" />Top Places
+            </div>
+          </div>
+          <section class="explore">
+            <div class="explore__wrapper">
+              <p class="explore__subtitle">Explore the world!</p>
+              <img class="explore__handbag" src="./images/handbag.svg" alt="" />
+            </div>
+            <h1>Travel top destination of the world</h1>
+            <p>
+              We always make our customer happy by providing as many choices as
+              possible
+            </p>
+            <div class="explore__button-wrapper">
+              <button class="explore__button explore__button--violet">
+                Get Started
+              </button>
+              <button class="explore__button">
+                <img src="./images/play-button.svg" alt="" />Watch Demo
+              </button>
+            </div>
+          </section>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
