header and first section finish

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   <body>
     <div class="main-container">
       <header class="header container">
-        <div class="auth"><a>Log In</a><button>Sign Up</button></div>
+        <div class="auth">
+          <a class="auth__link">Log In</a
+          ><button class="auth__button">Sign Up</button>
+        </div>
         <nav class="nav">
-          <ul>
-            <li>sadd</li>
-            <li>sadd</li>
+          <ul class="nav__list">
+            <li class="nav__item">Home</li>
+            <li class="nav__item">Discover</li>
+            <li class="nav__item">Special Deals</li>
+            <li class="nav__item">Contact</li>
           </ul>
         </nav>
         <div class="logo">
@@ -63,8 +68,8 @@
               <p class="explore__subtitle">Explore the world!</p>
               <img class="explore__handbag" src="./images/handbag.svg" alt="" />
             </div>
-            <h1>Travel top destination of the world</h1>
-            <p>
+            <h1 class="explore__title">Travel top destination of the world</h1>
+            <p class="explore__paragraph">
               We always make our customer happy by providing as many choices as
               possible
             </p>
